--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+        <script defer data-domain="simonschwedes.ch" src="https://plausible.schwedes.eu/js/plausible.js"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-prefetch>
