--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-        <script defer data-domain="simonschwedes.ch" src="https://plausible.schwedes.eu/js/plausible.js"></script>
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-prefetch>
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <meta name="viewport" content="width=device-width" />
+    <script defer data-domain="simonschwedes.ch" src="https://plausible.schwedes.eu/js/plausible.js"></script>
+    <!-- Hotjar Tracking Code for https://simonschwedes.ch -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 3300783, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
+    %sveltekit.head%
+</head>
+
+<body data-sveltekit-prefetch>
+    <div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
