updated analytics URL

--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width" />
-    <script defer data-domain="simonschwedes.ch" src="https://plausible.analytics.schwedes.eu/js/script.js"></script>
+    <script defer data-domain="simonschwedes.ch" src="https://plausible.schwedes.eu/js/script.js"></script>
     <!-- Hotjar Tracking Code for https://simonschwedes.ch -->
     %sveltekit.head%
 </head>
